--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -21,4 +21,51 @@
   border-radius: 0 40px 40px 0;
   padding: 13px;
   color: #1a73e8;
+  cursor: pointer;
+  font-size: 0.9rem;
+  margin: 5px;
+  width: 80%;
+}
+.marketTrends {
+  border-radius: 0 40px 40px 0;
+  padding: 13px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  margin: 5px;
+  width: 80%;
+}
+.marketTrends:hover {
+  background-color: #eeeeee;
+}
+.first {
+  border-bottom: 1px solid #dddddd;
+  opacity: 0.8;
+}
+.portWatch {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  padding: 0 10px 0 10px;
+  margin: 0;
+}
+.portWatch h6 {
+  padding: 0;
+  margin: 0;
+  font-size: 0.7rem;
+  font-weight: 500;
+  padding: 10px;
+}
+.portWatch span {
+  font-size: 2rem;
+  padding: 0;
+  margin: 0;
+  font-weight: 300;
+  color: #1a73e8;
+  padding: 5px 15px 5px 15px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.portWatch span:hover {
+  background-color: #eeeeee;
 }
