--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -25,6 +25,8 @@
   font-size: 0.9rem;
   margin: 5px;
   width: 80%;
+  display: flex;
+  align-items: center;
 }
 .marketTrends {
   border-radius: 0 40px 40px 0;
@@ -33,6 +35,8 @@
   font-size: 0.9rem;
   margin: 5px;
   width: 80%;
+  align-items: center;
+  display: flex;
 }
 .marketTrends:hover {
   background-color: #eeeeee;
@@ -68,4 +72,14 @@
 }
 .portWatch span:hover {
   background-color: #eeeeee;
+}
+.mostActive {
+  padding: 0;
+  margin: 0;
+  font-size: 0.7rem;
+  font-weight: 500;
+  padding: 19px;
+}
+.logo {
+  padding-right: 10px;
 }
