--- a/src/components/Trends/Trends.module.css
+++ b/src/components/Trends/Trends.module.css
@@ -2,5 +2,15 @@
   font-size: 0.7rem;
   border: 1px solid #dddddd;
   border-radius: 10px;
-  color: #999999;
+  display: inline-block;
+  padding: 3px 10px;
+  font-weight: 400;
+  margin: 2px;
+}
+.trends {
+  margin-top: 10px;
+}
+.trends div:hover {
+  cursor: pointer;
+  background-color: #eeeeee;
 }
