--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -6,6 +6,11 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  position: fixed;
+  z-index: 5;
+  background-color: white;
+  width: 100%;
+  margin-top: -5px;
 }
 .mdapp:hover,
 .fabar:hover {
@@ -25,6 +30,7 @@
 .signin {
   display: flex;
   align-items: center;
+  padding-right: 50px;
 }
 .signin span {
   padding: 10px 20px 10px 20px;
