--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -7,6 +7,7 @@
   left: -240px;
   transition: left 0.3s ease;
   box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 }
 .visible {
   left: 0;
