--- a/src/components/News/News.module.css
+++ b/src/components/News/News.module.css
@@ -5,8 +5,8 @@
 }
 .newsList {
   background-color: white;
-  border-radius: 10px;
-  padding: 2px 10px;
+  border-radius: 15px;
+  padding: 5px 15px;
   border: 1px solid #dddddd;
   font-size: 0.8rem;
   font-weight: 500;
@@ -15,9 +15,19 @@
 }
 .newsList:hover {
   cursor: pointer;
-  background-color: #eeeeee;
+  background-color: #090808;
 }
 .topics {
   color: inherit;
   text-decoration: none;
+}
+.newsItem {
+  margin-top: 15px;
+  border-top: 1px solid #eeeeee;
+  padding-top: 10px;
+}
+.source {
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: #555555;
 }
