--- a/src/components/NewList/NewList.module.css
+++ b/src/components/NewList/NewList.module.css
@@ -5,10 +5,14 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 5;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
+  max-height: 100%;
   width: 100%;
   text-align: center;
   align-items: center;
+  overflow: hidden;
+}
+.content {
 }
