--- a/src/components/NewList/NewList.module.css
+++ b/src/components/NewList/NewList.module.css
@@ -11,8 +11,7 @@
   max-height: 100%;
   width: 100%;
   text-align: center;
-  align-items: center;
-  overflow: hidden;
+  cursor: default;
 }
 .content {
 }
