--- a/src/components/NewList/NewList.module.css
+++ b/src/components/NewList/NewList.module.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   height: 100vh;
   max-height: 100%;
   width: 100%;
@@ -14,11 +14,30 @@
 }
 .content {
   background-color: white;
-  width: 20%;
+  width: 25%;
   border-radius: 10px;
   padding: 10px 15px;
+  height: 30%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .content h3 {
   color: black;
   font-weight: 400;
+}
+.content div {
+  display: flex;
+  justify-content: flex-end;
+}
+.content input {
+  border: 1px solid #164de5;
+  border-radius: 3px;
+  width: 98%;
+  height: 50px;
+}
+.content input:focus {
+  border: 1px solid #164de5;
 }
