--- a/src/components/NewList/NewList.module.css
+++ b/src/components/NewList/NewList.module.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   height: 100vh;
   max-height: 100%;
   width: 100%;
@@ -17,8 +17,8 @@
   width: 25%;
   border-radius: 10px;
   padding: 10px 15px;
-  height: 30%;
-
+  height: 28%;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -44,4 +44,11 @@
 }
 .enter input:focus {
   border: none;
+}
+.cancelSave {
+  margin-top: 9%;
+}
+.cancel:hover {
+  background-color: #e8f0fe;
+  cursor: pointer;
 }
