--- a/src/components/NewList/NewList.module.css
+++ b/src/components/NewList/NewList.module.css
@@ -33,7 +33,8 @@
   justify-content: flex-end;
 }
 .enter {
-  border: 1px solid #164de5;
+  border: 1px;
+  border-style: solid;
   border-radius: 3px;
   width: 98%;
   height: 50px;
@@ -42,8 +43,8 @@
   border: none;
   width: 95%;
   font-size: 1rem;
-  margin-left: 1%;
-  margin-right: 1%;
+  margin: 0 1% 0 1%;
+  color: "#666666";
 }
 .enter input:focus {
   border-color: transparent;
