--- a/src/components/MostFollowed/MostFollowed.module.css
+++ b/src/components/MostFollowed/MostFollowed.module.css
@@ -1,7 +1,7 @@
 .most {
   display: flex;
   flex-direction: column;
-  border: "1px solid #dddddd";
+  border: 1px solid #dddddd;
   padding: 20px;
   border-radius: 10px;
   margin-top: 15px;
